--- a/Views/Shared/_LoginModalPartial.cshtml
+++ b/Views/Shared/_LoginModalPartial.cshtml
@@ -28,24 +28,25 @@
 					<!--Login Panel-->
 					<div class="tab-pane fade" id="navbarLogin-login" role="tabpanel">
 
-						<!-- Default form login -->
-						<form id="loginForm" class="text-center needs-validation" method="post" asp-controller="Account" asp-action="Register">
+						<p class="status"></p>
 
-							<p class="status"></p>
+						<div class="text-center mb-3">
+							<div>
+								<div>Connect with:</div>
+								<div class="d-flex gap-1  justify-content-center">
 
-							<div class="text-center mb-3">
-								<div class="wp-social-login-widget">
-									<div class="wp-social-login-connect-with">Connect with:</div>
-									<div class="wp-social-login-provider-list">
-										<a rel="nofollow" href="" title="Connect with Facebook" class="btn btn-primary btn-floating mx-1 ripple-surface" data-provider="Facebook" role="button" style="min-width: 37px;"><i class="fab fa-facebook-f"></i></a>
-										<a rel="nofollow" href="" title="Connect with Google" class="btn btn-primary btn-floating mx-1" data-provider="Google" role="button"><i class="fab fa-google"></i></a>
-										<a rel="nofollow" href="" title="Connect with Twitter" class="btn btn-primary btn-floating mx-1" data-provider="Twitter" role="button"><i class="fab fa-twitter"></i></a>
-									</div>
+									<a rel="nofollow" href="" title="Connect with Facebook" class="btn btn-primary btn-floating mx-1 ripple-surface" data-provider="Facebook" role="button" style="min-width: 37px;"><i class="fab fa-facebook-f"></i></a>
+									<form method="post" asp-controller="Account" asp-action="ExternalLogin">
+										<button type="submit" class="btn btn-primary btn-floating mx-1" title="Connect with Google" name="provider" value="Google"><i class="fab fa-google"></i></button>
+									</form>
+									<a rel="nofollow" href="" title="Connect with Twitter" class="btn btn-primary btn-floating mx-1" data-provider="Twitter" role="button"><i class="fab fa-twitter"></i></a>
 								</div>
 							</div>
+						</div>
 
-							<p class="text-center">or:</p>
-
+						<p class="text-center">or:</p>
+						<!-- Default form login -->
+						<form id="loginForm" class="text-center needs-validation" method="post" asp-controller="Account" asp-action="Register">
 							<!-- Email input -->
 							<div class="form-outline form-auth-mdb mb-4">
 								<input type="text" id="loginUsername" class="form-control" required="">
