--- a/Views/Forum/DisplayTemplates/ForumTheme.cshtml
+++ b/Views/Forum/DisplayTemplates/ForumTheme.cshtml
@@ -6,9 +6,10 @@
 }
 <div class="card mb-3" style="background-color: #303030;">
 	<div class="card-header" style="background-color: #303030 !important;">
-		<h4>
-			@Model.Title
-		</h4>
+		<a asp-action="Theme" asp-route-id="@Model.Id">
+			<h4>@Model.Title</h4>
+		</a>
+		
 	</div>
 	<div class="card-body">
 
