null checks, basic topic layout

--- a/Views/Forum/Index.cshtml
+++ b/Views/Forum/Index.cshtml
@@ -47,7 +47,8 @@
 </div>
 
 <!-- Add section form -->
-@if(User.Identity.IsAuthenticated) {
+@if (User.Identity is not null && User.Identity.IsAuthenticated)
+{
 	<div class="card">
 		<div class="card-body">
 			<h5>Add new section</h5>
