--- a/Views/Forum/DisplayTemplates/ForumTopic.cshtml
+++ b/Views/Forum/DisplayTemplates/ForumTopic.cshtml
@@ -5,12 +5,10 @@
 @{
 }
 <div class="card mb-3">
-	<div class="card-header">
+	<div class="card-body">
 		<a asp-action="Topic" asp-route-id="@Model.Id">
 			<h4>@Model.Title</h4>
 		</a>
-	</div>
-	<div class="card-footer">
 		Author @Model.AuthorName, @Model.CreationDateString
 	</div>
 </div>
