--- a/Views/Forum/Theme.cshtml
+++ b/Views/Forum/Theme.cshtml
@@ -5,11 +5,11 @@
 @{
 }
 
-<!-- Create topic -->
-@if (User.Identity.IsAuthenticated)
-{
-	<div class="card mb-3">
-		<div class="card-body">
+<div class="card mb-3">
+	<div class="card-body d-flex justify-content-between align-items-center">
+		<h2>@Model.Title</h2>
+		@if (User.Identity is not null && User.Identity.IsAuthenticated)
+		{
 			<!-- Add topic button -->
 			<button id="addTopicBtn" type="button" class="btn btn-primary"
 					data-mdb-toggle="modal"
@@ -17,10 +17,13 @@
 					data-theme-id="@Model.Id.ToString()">
 				Create topic
 			</button>
-		</div>
+		}
 	</div>
+</div>
 
 
+@if (User.Identity is not null && User.Identity.IsAuthenticated)
+{
 	<!-- Add topic modal -->
 	<div class="modal fade" id="addTopicModal" tabindex="-1" aria-labelledby="addTopicModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
