--- a/Views/Forum/Topic.cshtml
+++ b/Views/Forum/Topic.cshtml
@@ -3,7 +3,38 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+	var author = Model.Author;
 }
 
-<p>@Model.Title</p>
-<p>@Model.Description</p>
+<div class="card mb-3">
+	<div class="card-body">
+		<h2>@Model.Title</h2>
+		<hr />
+		<div class="d-flex align-items-center ">
+			<img src="~/img/@(string.IsNullOrEmpty(author.AvatarUrl) ? "default-avatar.png" : Model.Author.AvatarUrl)" alt="avatar"
+				 title="@author.UserName"
+		 		 style="width: 40px; height: 40px; border-radius: 100%">
+			<div class="mx-3">
+				<div>Author @author.UserName</div>
+				<div>@Model.CreatedDt</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="card mb-3">
+	<div class="card-body">
+		<div class="row">
+			<div class="col d-flex align-items-center flex-column">
+				<div>@author.UserName</div>
+				<img src="~/img/@(string.IsNullOrEmpty(author.AvatarUrl) ? "default-avatar.png" : Model.Author.AvatarUrl)" alt="avatar"
+					 class="my-3" title="@author.UserName"
+					 style="aspect-ratio: 1/1; width: 100%; border-radius: 100%">
+			</div>
+			<div class="col-10">
+				<small class="text-muted">Published @Model.CreatedDt</small>
+				<p class="mt-3">@Model.Description</p>
+			</div>
+		</div>
+	</div>
+</div>
