--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -31,7 +32,11 @@
 				</div>
 				@if (User?.Identity?.IsAuthenticated == true)
 				{
+					string? userAvatar = Context.User.FindFirst("Avatar")?.Value;
 					<div>
+						<img src="~/img/@(string.IsNullOrEmpty(userAvatar) ? "default-avatar.png" : userAvatar)" alt="avatar"
+							 title="@User.Identity.Name"
+							 style="width: 40px; height: 40px; border-radius: 100%">
 						<span>@User.Identity.Name</span>
 						<form method="post" style="display: inline-block" asp-controller="Account" asp-action="Logout">
 							<input class="btn btn-primary" style="margin-left: 8px" type="submit" value="Log Out" />
