--- a/Views/Forum/DisplayTemplates/ForumPost.cshtml
+++ b/Views/Forum/DisplayTemplates/ForumPost.cshtml
@@ -9,8 +9,8 @@
 	<div class="card-body">
 		<div class="row">
 			<div class="col d-flex align-items-center flex-column">
-				<div>@Model.AuthorName</div>
-				<img src="~/img/@(string.IsNullOrEmpty(Model.AuthorAvatarURL) ? "default-avatar.png" : Model.AuthorAvatarURL)" alt="avatar"
+				<a asp-controller="Account" asp-action="Profile" asp-route-id="@Model.AuthorId">@Model.AuthorName</a>
+				<img src="~/img/@(string.IsNullOrEmpty(Model.AuthorAvatarURL) ? "default-avatar.png" : $"avatars/{Model.AuthorAvatarURL}")" alt="avatar"
 			  	     class="my-3" title="@Model.AuthorName"
 					 style="aspect-ratio: 1/1; width: 100%; border-radius: 100%">
 			</div>
