--- a/Views/Forum/Theme.cshtml
+++ b/Views/Forum/Theme.cshtml
@@ -8,7 +8,7 @@
 <div class="card mb-3">
 	<div class="card-body d-flex justify-content-between align-items-center">
 		<h2>@Model.Title</h2>
-		@if (User.Identity is not null && User.Identity.IsAuthenticated)
+		@if (User.Identity is not null && User.Identity.IsAuthenticated && !User.IsInRole("NotConfirmed"))
 		{
 			<!-- Add topic button -->
 			<button id="addTopicBtn" type="button" class="btn btn-primary"
@@ -22,7 +22,7 @@
 </div>
 
 
-@if (User.Identity is not null && User.Identity.IsAuthenticated)
+@if (User.Identity is not null && User.Identity.IsAuthenticated && !User.IsInRole("NotConfirmed"))
 {
 	<!-- Add topic modal -->
 	<div class="modal fade" id="addTopicModal" tabindex="-1" aria-labelledby="addTopicModalLabel" aria-hidden="true">
